[package]
name = "gs19wasm"
version = "0.1.0"
authors = ["y12studio <y12studio@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
# secp256k1 - Rust https://docs.rs/libsecp256k1/0.2.2/secp256k1/
rustlibsecp256k1 = { version = "0.2.2", package = "libsecp256k1" }
base58 = "0.1"
# bitcoin = "0.18.0"
tiny-bip39 = { version = "0.6.1", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
