[package]
name = "gs19wasm"
version = "0.1.0"
authors = ["y12studio <y12studio@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# secp256k1 - Rust https://docs.rs/libsecp256k1/0.2.2/secp256k1/
rustlibsecp256k1 = { version = "0.2.2", package = "libsecp256k1" }
base58 = "0.1"
ripemd160 = "0.8.0"
sha2 = "0.8.0"
tiny-keccak = "1.4.2"
tiny-bip39 = { version = "0.6.1", default-features = false }
uuid = { version = "0.7", features = ["v4", "serde", "wasm-bindgen"] }
primitive-types = { version = "0.2.1", default-features = false, features = ["codec"] }
rustc-hex = { version = "2.0.1", default-features = false }
serde = "^1.0.59"
serde_derive = "^1.0.59"
etcommon-rlp = { version = "0.2", default-features = false }
simple_asn1 = { version="0.4.0" }
hex-literal = { version = "0.1.4", optional = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[dependencies.substrate_primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '82744fbb6f4d677f2edfe9d88737c237622c97a4'

[dev-dependencies]
wasm-bindgen-test = "0.2"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

